--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "digest-header": "^0.0.1",
     "humanize-ms": "^1.2.0",
     "iconv-lite": "^0.4.13",
-    "statuses": "^1.3.0"
+    "statuses": "^1.3.0",
+    "tunnel-agent": "^0.4.3"
   },
   "devDependencies": {
     "agentkeepalive": "2",
